--- a/testpage/index.html
+++ b/testpage/index.html
@@ -280,7 +280,7 @@
         software.</p>
 
         <p><strong>For systems using the
-        <a href="https://apache.org/">Apache Webserver</strong></a>:
+        <a href="https://httpd.apache.org/">Apache Webserver</strong></a>:
         You can add content to the directory <code>/var/www/html/</code>.
         Until you do so, people visiting your website will see this page. If
         you would like this page to not be shown, follow the instructions in:
