--- a/testpage/index.html
+++ b/testpage/index.html
@@ -230,7 +230,7 @@
       <div class='col-sm-12 col-md-6 col-md-6 '></div>
           <p class="summary">This page is used to test the proper operation of
             an HTTP server after it has been installed on a Rocky Linux system.
-            If you can read this page, it means that the software it working
+            If you can read this page, it means that the software is working
             correctly.</p>
       </div>
       
