initial version of 100

--- a/testpage/index.html
+++ b/testpage/index.html
@@ -12,13 +12,13 @@
         width: 100%;
       }  
         body {
-  background: rgb(20,72,50);
-  background: -moz-linear-gradient(180deg, rgba(69,69,70,1) 30%, rgba(0,0,0,1) 90%)  ;
-  background: -webkit-linear-gradient(180deg, rgba(69,69,70,1) 30%, rgba(0,0,0,1) 90%) ;
-  background: linear-gradient(180deg, rgba(69,69,70,1) 30%, rgba(0,0,0,1) 90%);
+  background: rgb(69,23,32);
+  background: -moz-linear-gradient(180deg, rgba(69,23,32,1) 30%, rgba(0,0,0,1) 90%)  ;
+  background: -webkit-linear-gradient(180deg, rgba(69,23,32,1) 30%, rgba(0,0,0,1) 90%) ;
+  background: linear-gradient(180deg, rgba(69,23,32,1) 30%, rgba(0,0,0,1) 90%);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b0b1b3",endColorstr="#b0b1b3",GradientType=1); 
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b43c56",endColorstr="#b43c56",GradientType=1); 
         color: white;
         font-size: 0.9em;
         font-weight: 400;
